--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
   "broserList": [
     "last 2 versions"
